--- a/WXBManager.plist
+++ b/WXBManager.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/atomvc/atomvc/master/atomvc.ipa</string>
+					<string>https://raw.githubusercontent.com/atomvc/WXBManager/master/WXBManager.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/atomvc/atomvc/master/atomvc.png</string>
+					<string>https://raw.githubusercontent.com/atomvc/WXBManager/master/WXBManager.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,19 +27,19 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/atomvc/atomvc/master/atomvc.png</string>
+					<string>https://raw.githubusercontent.com/atomvc/WXBManager/master/WXBManager.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.in.atomvc</string>
+				<string>com.weixiangben.v1</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>原子创投</string>
+				<string>微相本</string>
 			</dict>
 		</dict>
 	</array>
